objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Commission_Notes__c</fullName>
        <description>Used to view notes for commissions - Finance Only</description>
        <label>Commission Notes</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Time and Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_1K_emails_excess__c</fullName>
        <label>Cost/1K emails excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_extra_email_template_del__c</fullName>
        <label>Cost/extra email template</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email_Templates_Included_del__c</fullName>
        <label># Email Templates Included</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Info_Only__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Fee__c</fullName>
        <label>Implementation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Emails_Month__c</fullName>
        <label>Max # Email Opens/Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name for the roll-up fields on Quote in order to populate the Sales Order Form</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Deferral_Release_Date__c</fullName>
        <description>If % Paid out is modified, edit Next Deferral&apos;s release date</description>
        <inlineHelpText>If you modified the % Paid out, make sure to edit the next Deferral&apos;s release date</inlineHelpText>
        <label>Next Deferral Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POC_Terms__c</fullName>
        <label>Special Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Websites_covered__c</fullName>
        <label>Partner Websites covered</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percentage_Paid_Out__c</fullName>
        <defaultValue>1</defaultValue>
        <description>% of commission that will be paid</description>
        <inlineHelpText>% of commission that will be paid</inlineHelpText>
        <label>% Paid Out</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Fee__c</fullName>
        <label>Performance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SaaS_Subscription_Fee_Sales_Price__c</fullName>
        <formula>IF(ISPICKVAL ( Interval__c  , &quot;Monthly&quot;),  UnitPrice/12 , 
IF(ISPICKVAL(Interval__c , &quot;Quarterly&quot;), UnitPrice/4,UnitPrice))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SaaS Subscription Fee/Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contract_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(TEXT(ContractType__c)),
OR(
ISPICKVAL(Product2.Family,&apos;Services&apos;),
ISPICKVAL(Product2.Family,&apos;Integration&apos;)
),
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($Profile.Name = &quot;Super User&quot;),
Quote.Opportunity.Probability &gt;= 0.5
)</errorConditionFormula>
        <errorDisplayField>ContractType__c</errorDisplayField>
        <errorMessage>Please select a contract type for the service and integration products. This is required.</errorMessage>
    </validationRules>
</CustomObject>